--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
   },
   "include": [
     "src",
-    ".eslintrc.js"
-  ]
+    ".eslintrc.js",
+    "craco.config.js"
+  ],
+  "extends": "./tsconfig.paths.json"
 }
