Add a users redux slice, pass user data to PostList component and add a userId prop to the postsSlice state

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -20,6 +20,9 @@
     "@posts/*": [
       "./src/features/posts/*"
     ],
+    "@users/*": [
+      "./src/features/users/*"
+    ],
   },
   }
 }
