add a fetchUsers thunk to usersSlice

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -17,6 +17,9 @@
     "@pages/*": [
       "./src/pages/*"
     ],
+    "@utils/*": [
+      "./src/utils/*"
+    ],
     "@posts/*": [
       "./src/features/posts/*"
     ],
